# django_rest

./: .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
data/: test.csv
envs/: django.env.sample  postgres.env.sample
nginx/conf/: djrest.conf
src/django_rest/: asgi.py  celery.py  settings.py  urls.py
src/tasks/: api.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py
src/tasks/migrations/: 0001_initial.py  0002_auto_20220728_0851.py
